TCOMP-1599 better JVM tolerance in our Unsafe usage